# baseclasses

./: CMakeLists.txt
cmake/: BaseClassesConfig.cmake.in
src/: CMakeLists.txt
